# AgentSquire

./: .gitignore  .ignore  .opencodeignore  claude.ps1  commit_msg.txt  fix_test.ps1  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_replay.py  test_results.txt  vite.config.ts  wifi-comparison.html
.AiControl/: .current
.AiControl/UI_Business_Test/: env.md  skill.md  state.md
.AiControl/agent-tools/: decisions.md  state.md
.AiControl/app-shell/: decisions.md  env.md  prompt.md  todo.json
.AiControl/chat/: decisions.md  env.md  todo.json
.AiControl/lessons-learned/: 001-vite-server-survival.md  002-tauri-command-naming.md  003-tests-bypass-ipc.md  004-api-first-diagnosis.md  lessons.md
.AiControl/lessons-learner/: env.md  skill.md
.AiControl/post-mvp/: env.md  prompt.md
.AiControl/project-scaffold/: decisions.md  env.md  state.md  todo.json
.AiControl/root/: decisions.md  env.md  prompt.md  state.md  todo.json
.AiControl/rust-backbone/: decisions.md  env.md
.AiControl/search-panel/: prompt.md  todo.json
.AiControl/settings-polish/: decisions.md  env.md
.AiControl/ui-layout-design/: decisions.md  env.md  state.md  todo.json
.AiControl/uiautotestframework/: env.md  state.md
.opencode/: opencode.json
.opencode/agents/: lessons-learner.md  ui-test-agent.md
.opencode/rules/: workflow.md
ArchitecturePlanning/: README.md  aicontrol-static-node-instructions.md  component-analysis.md  context_squire_process_trees_addendum.md  debug_testing_workflow_skill.md  decision_tree_workflow_skill.md  dependency-report.md  implementation-plan.md  layout-design.md  project-structure.md  squire-architecture-spec.md
ArchitecturePlanning/adr/: 0001-use-tauri-as-desktop-framework.md  0002-use-react-as-frontend-framework.md  0003-llm-provider-abstraction-trait.md  0004-conversation-store-abstraction-trait.md  0005-chat-ui-with-block-based-rendering.md  0006-ripgrep-only-code-search.md  0007-use-momoi-explorer-for-file-tree.md  0008-startup-scripts.md  0009-log-debug-mode.md  0010-deploy-method.md  0011-test-code-refactoring-strategy.md  0012-referential-token-ranges.md
e2e/: tsconfig.json  wdio.conf.ts
e2e/helpers/: tauri.ts
e2e/specs/: app.test.ts  ask-user-loop.test.ts  repro.test.ts  session-creation-ux.test.ts  task-001-resize-side-panel.test.ts  task-002-open-project.test.ts  task-003-file-explorer.test.ts  task-004-search-panel.test.ts  task-005-bottom-panel.test.ts  task-006-file-explorer-icons.test.ts  task-007-settings-llm-config.test.ts  task-008-panel-size-persistence.test.ts  task-009-stuck-tool-visibility.test.ts  test-list-providers.test.ts  (+5 more)
scripts/: build.ps1  checkDirty.ps1  clean.ps1  frontend-test.ps1  run.ps1  test-all.ps1  test.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.config/: hakari.toml
src-tauri/.squirecli/: config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/mcp-sdk/: Cargo.toml
src-tauri/crates/mcp-sdk/src/: lib.rs
src-tauri/crates/provider-anthropic/: Cargo.toml
src-tauri/crates/provider-anthropic/src/: lib.rs
src-tauri/crates/provider-core/: Cargo.toml
src-tauri/crates/provider-core/src/: lib.rs
src-tauri/crates/provider-openai/: Cargo.toml
src-tauri/crates/provider-openai/src/: lib.rs
src-tauri/crates/provider-registry/: Cargo.toml
src-tauri/crates/provider-registry/src/: lib.rs
src-tauri/crates/squire-store/: Cargo.toml
src-tauri/crates/squire-store/src/: embedding.rs  lancedb.rs  lib.rs  store.rs  trace.rs  types.rs
src-tauri/examples/: ask_user_e2e.rs  raw_partition_storage_e2e.rs  tool_token_ingestion_e2e.rs  user_input_chunking_e2e.rs
src-tauri/hakari/: Cargo.toml
src-tauri/prompts/: system-prompt-formatter.md  system-prompt-phase1.md  system-prompt-phase2.md  system-prompt.md
src-tauri/skills/: SK_CreateSkill.toml  SK_CreateWorkflow.toml  SK_DecisionTree.toml  SK_SubagentDispatch.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: context_adapter.rs  context_adapter_test.rs  decision_tree.rs  file_tools.rs  git_tools.rs  mod.rs  mod_test.rs  search_tools.rs  squire.rs  squire_prompts.rs  squire_skills.rs  squire_test.rs  squire_workflows.rs  subagent.rs  terminal_tool.rs  todo_tree.rs  web_tools.rs
src-tauri/src/agent/squire/: adapter.rs  ingestion.rs  protocol.rs  store.rs  tools.rs  types.rs
src-tauri/src/commands/: config_update.rs  conversations.rs  diagnostics.rs  files.rs  git.rs  mod.rs  providers_cmd.rs  providers_cmd_test.rs  search.rs  setup_cmd.rs  shell.rs  stream_control.rs  streaming_cmd.rs  streaming_cmd_test.rs  terminal_cmd.rs  tools_cmd.rs  utils.rs  watcher_cmd.rs
src-tauri/src/engine/: emitter.rs  mod.rs  runtime.rs  squire.rs  traits.rs
src-tauri/src/fs/: git.rs  mod.rs  ops.rs  watcher.rs
src-tauri/src/llm/: anthropic.rs  mod.rs  openai.rs  openai_test.rs  provider.rs  registry.rs  thinking.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/search/: grep.rs
src-tauri/src/shell/: exec.rs
src-tauri/src/state/: config.rs  config_test.rs  db.rs
src-tauri/src/storage/: conversation_store.rs  embedding.rs  mod.rs  sqlite_store.rs  squire_lancedb.rs  squire_lancedb_test.rs  squire_trace.rs
src-tauri/src/terminal/: manager.rs
src-tauri/tests/: agent_test.rs  commands_git_test.rs  commands_shell_test.rs  config_update_test.rs  conversation_store_test.rs  conversations_test.rs  diagnostics_test.rs  exec_test.rs  files_test.rs  fs_git_test.rs  fs_ops_test.rs  grep_test.rs  integration_test.rs  provider_test.rs  search_test.rs  sqlite_store_test.rs  squire_e2e_test.rs  squire_fishing_test.rs  squire_headless_report_test.rs  squire_multiturn_test.rs  stream_control_test.rs  terminal_cmd_test.rs  thinking_test.rs  todo_tree_test.rs  utils_test.rs  watcher_cmd_test.rs
src-tauri/workflows/: WF_BatchDiscovery.toml  WF_DebugTesting.toml  WF_Debugging.toml  WF_DecisionTree.toml  WF_FriendlyChat.toml  WF_GovernanceFramework.toml  WF_InteractiveDiscovery.toml  WF_SimpleQA.toml  WF_TaskExecution.toml  WF_UseSubagent.toml  WF_WaterfallDesign.toml
(+281 files in other folders)
