[package]
name = "squirecli"
version = "0.1.0"
description = "SquireCLI — AI-powered code assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "squirecli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-shell = "2"
portable-pty = "0.8"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
notify = "6"
git2 = "0.19"
ignore = "0.4"
regex = "1"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
