[package]
name = "squirecli"
version = "0.1.0"
description = "SquireCLI — AI-powered code assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "squirecli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-shell = "2"
portable-pty = "0.8"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
notify = "6"
git2 = "0.19"
ignore = "0.4"
regex = "1"
futures = "0.3"
async-trait = "0.1"
lancedb = "0.14"
arrow-array = "53.2"
arrow-schema = "53.2"
# Text embeddings for Squire semantic vector search. default-features off to
# drop the heavy `image-models` feature (image codecs) we don't use; keep
# `hf-hub` (model download) + `ort-download-binaries-native-tls` (auto-provision
# the ONNX Runtime binary on this Windows x64 machine on first build).
fastembed = { version = "5.17.2", default-features = false, features = [
    "hf-hub",
    "hf-hub-native-tls",
    "ort-download-binaries-native-tls",
] }

[dev-dependencies]
tempfile = "3"

# --- Build profiles -------------------------------------------------------
# Dev builds keep OUR crate at opt-level 0 for fast iterative rebuilds, but
# compile third-party dependencies optimized. The heavy native deps here
# (arrow, lancedb/lance/datafusion, git2, rusqlite) are rarely rebuilt, so
# paying for their optimization once buys a much faster dev app at runtime
# without slowing edit/rebuild cycles on our own code.
[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 2
