[workspace]
members = [
    "."
,
    "hakari",
    "crates/provider-core",
    "crates/provider-openai",
    "crates/provider-anthropic",
    "crates/provider-registry",
    "crates/mcp-sdk",
    "crates/squire-store"
]
resolver = "2"

[package]
name = "squirecli"
version = "0.1.0"
description = "SquireCLI — AI-powered code assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "squirecli_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
provider-core = { path = "crates/provider-core" }
provider-openai = { path = "crates/provider-openai" }
provider-anthropic = { path = "crates/provider-anthropic" }
provider-registry = { path = "crates/provider-registry" }
mcp-sdk = { path = "crates/mcp-sdk" }
squire-store = { path = "crates/squire-store" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-shell = "2"
portable-pty = "0.8"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
notify = "6"
git2 = "0.19"
ignore = "0.4"
regex = "1"
safe-json-repair = "0.1"
futures = "0.3"
async-trait = "0.1"
hakari = { version = "0.1", path = "hakari" }

[dev-dependencies]
tempfile = "3"

# --- Build profiles -------------------------------------------------------
# Dev builds keep OUR crate at opt-level 0 for fast iterative rebuilds, but
# compile third-party dependencies optimized. The heavy native deps here
# (arrow, lancedb/lance/datafusion, git2, rusqlite) are rarely rebuilt, so
# paying for their optimization once buys a much faster dev app at runtime
# without slowing edit/rebuild cycles on our own code.
[profile.dev]
incremental = true
codegen-units = 256            # 压榨多核并行代码生成
lto = false                    # 严禁在开发阶段开启 LTO
split-debuginfo = "unpacked"   # 极其重要：在 Windows 上阻止巨大的 PDB 符号合并

[profile.dev.package."*"]
opt-level = 2
