[package]
name = "provider-anthropic"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
provider-core = { path = "../provider-core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
