[package]
name = "squire-store"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
futures = "0.3"
lancedb = "0.14"
arrow-array = "53.2"
arrow-schema = "53.2"
# Text embeddings for Squire semantic vector search. default-features off to
# drop the heavy `image-models` feature (image codecs) we don't use; keep
# `hf-hub` (model download) + `ort-download-binaries-native-tls` (auto-provision
# the ONNX Runtime binary on this Windows x64 machine on first build).
fastembed = { version = "5.17.2", default-features = false, features = [
    "hf-hub",
    "hf-hub-native-tls",
    "ort-download-binaries-native-tls",
] }
